--- a/SocialNetwork/Base.lproj/Main.storyboard
+++ b/SocialNetwork/Base.lproj/Main.storyboard
@@ -236,6 +236,9 @@
                                                     <constraint firstAttribute="width" constant="49" id="CDu-eX-lf9"/>
                                                 </constraints>
                                                 <state key="normal" image="add-post"/>
+                                                <connections>
+                                                    <action selector="postButtonTapped:" destination="IcG-tz-Fpv" eventType="touchUpInside" id="Htg-bk-MB9"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -375,6 +378,7 @@
                     </view>
                     <connections>
                         <outlet property="addImage" destination="7hv-O5-d9n" id="ybn-8v-aN7"/>
+                        <outlet property="captionField" destination="Ogi-Eb-gPd" id="rfs-GD-Soa"/>
                         <outlet property="tableView" destination="Ic5-Dy-b4b" id="aCu-7F-yxL"/>
                     </connections>
                 </viewController>
